Removing unused endpoints and parameters
